<resources>
    <string name="app_name">NASA Observer</string>
    <string name="wiki_path">M94.938,19H76.331l-1.332,0.229v1.788c0,0.21 0.636,0.386 0.812,0.517c0.168,0.142 0.623,0.219 0.811,0.219l1.686,0.084c1.912,0.09 2.494,0.505 3.239,1.205c0.731,0.725 0.851,1.955 0.281,3.684L65.383,69.654l-0.628,-0.187L54.309,45.97c0.151,-0.353 0.242,-0.551 0.242,-0.551l8.553,-17.578c0.994,-1.854 1.957,-3.511 2.446,-4.283c0.894,-1.408 1.328,-1.674 3.763,-1.797c0.498,0 0.688,-0.244 0.688,-0.738v-1.778l-0.125,-0.191c0,0 -10.224,-0.035 -14.879,0l0.002,0.183v1.779c0,0.217 -0.119,0.39 0.046,0.521c0.176,0.142 0.25,0.215 0.439,0.215l0.697,0.089c1.902,0.09 2.754,0.636 3.012,0.979c0.455,0.615 0.668,1.271 -0.434,3.911l-6.585,14.42l-5.95,-13.376c-1.952,-4.274 -2.434,-5.597 0.507,-5.844l0.79,-0.183c0.566,0 0.478,-0.224 0.478,-0.649v-1.87l-0.059,-0.153c0,0 -10.899,0 -15.873,0.003L32,19.262v1.875c0,0.421 0.416,0.529 1.186,0.645c2.754,0.396 2.707,0.713 5.428,6.646c0.407,0.889 1.61,3.57 1.61,3.57l6.203,13.391c0,0 0.704,1.72 1.805,4.39l-9.016,19.763l-0.514,-0.146c0,0 -13.992,-32.418 -18.037,-43.266c-0.427,-1.117 -0.611,-1.953 -0.611,-2.468c0,-1.102 0.904,-1.699 2.712,-1.779l2.751,-0.099c0.563,0 1.483,-0.236 1.483,-0.727v-1.779l-0.829,-0.184c0,0 -17.139,-0.021 -20.602,0L5,19.279v1.872c0,0.336 0.449,0.545 1.228,0.634c2.128,0.129 3.559,0.499 4.229,1.123c0.668,0.628 1.393,2.215 2.333,4.688c5.086,13.424 15.901,37.38 21.166,51.026c1.512,3.724 3.423,4.303 5.732,-0.117c2.379,-4.848 7.179,-15.608 10.68,-23.552c3.275,7.924 7.734,18.645 9.885,23.501c1.712,3.887 3.664,4.271 5.646,0.116c5.183,-12.654 20.319,-50.736 20.319,-50.736c0.654,-1.869 1.568,-3.309 2.746,-4.355c1.169,-1.033 2.909,-1.617 5.349,-1.731c0.494,0 0.688,-0.249 0.688,-0.731v-1.788L94.938,19z</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_in_wiki">Search in wiki</string>
    <string name="helper_text">Search this in wiki</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="floating_action_button">floating action button</string>
    <string name="two_cluster_and_comet">Two Cluster and Comet</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="to_the_first_screen">To the first screen</string>
    <string name="to_the_second_screen">To the second screen</string>
    <!--  Settings Fragment  -->
    <string name="default_text">Default</string>
    <string name="entry_chip">Entry</string>
    <string name="choice_chip">Choice</string>
    <string name="action_chip">Action</string>
    <string name="filter_chip">Filter</string>
    <string name="background_color_chip">Background Color</string>
    <string name="ripple_color_chip">Ripple Color</string>
    <string name="chip_icon_chip">Chip icon</string>
    <string name="chip_chip">Chip</string>
    <string name="group_chip">Group</string>
    <string name="one_chip">One</string>
    <string name="two_chip">Two</string>
    <string name="choose_one">Choose One</string>
    <string name="choice_a">Choice A</string>
    <string name="choice_b">Choice B</string>
    <string name="choice_c">Choice C</string>
    <string name="in_chip">in</string>
    <string name="single_chip">single</string>
    <string name="line_chip">line</string>
    <string name="add_chip">add</string>
    <string name="a_chip">a</string>
    <string name="horizontal_chip">horizontal</string>
    <string name="scroll_chip">scroll</string>
    <string name="close_icon_listener">Close Icon Listener</string>
    <string name="raised_button">Raised Button</string>
    <string name="unelevated_button">Unelevated Button</string>
    <string name="outlined_button">Outlined Button</string>
    <string name="text_button">Text Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="radio_button">Radio Button</string>
    <string name="switch_button">Switch</string>
    <string name="filled_box_text_field">Filled Box Text Field</string>
    <string name="text_input_field">Text</string>
    <string name="outlined_box_text_field">Outlined Box Text Field</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="card">Card</string>


    <!--  Very Long text  -->
    <string name="long_text">This lovely starfield spans some four full moons (about 2 degrees)
        across the heroic northern constellation of Perseus.
        In telescopic exposures made during the nights of January 24, 26, and 28
        it holds the famous pair of open or galactic star clusters h and Chi Persei with comet PanSTARRS (C/2017 T2)
        captured each night as it swept left to right across the field of view.
        Also cataloged as NGC 869 (right) and NGC 884,
        both star clusters are about 7,000 light-years away and contain stars much younger and hotter than the Sun.
        Separated by only a few hundred light-years,
        the clusters are both 13 million years young based on the ages of their individual stars,
        evidence that they were likely a product of the same star-forming region.
        Discovered in 2017 while still beyond the orbit of Saturn,
        Comet PanSTARRs is a new visitor to the inner solar system and just over 13 light-minutes from planet Earth.
        Always a rewarding sight in binoculars, the Double Cluster is even visible to the unaided eye from dark locations.
        C/2017 T2 could remain a telescopic comet though.
        One of the brightest comets anticipated in 2020 it makes its closest approach to the Sun in early May.</string>
    <string name="yesterday_picture_button_text">Yesterday picture</string>
    <string name="random_picture_button_text">Random picture</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="random">Random</string>

</resources>