<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.api.TodayFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_today"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/main_fragment_padding"
            android:paddingEnd="@dimen/main_fragment_padding">

            <ru.dmkalvan.nasaobserver.util.EquilateralImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_no_photo_vector" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/bottom_sheet_layout" />

    <include layout="@layout/loading_layout" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/linear_margin_bottom_slide_indicators"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins_for_slide_indicators"
            android:layout_marginLeft="@dimen/margins_for_slide_indicators"
            android:layout_marginEnd="@dimen/margins_for_slide_indicators"
            android:layout_marginRight="@dimen/margins_for_slide_indicators"
            android:contentDescription="@string/yesterday"
            android:src="@drawable/swipe_indicator_passive" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins_for_slide_indicators"
            android:layout_marginLeft="@dimen/margins_for_slide_indicators"
            android:layout_marginEnd="@dimen/margins_for_slide_indicators"
            android:layout_marginRight="@dimen/margins_for_slide_indicators"
            android:contentDescription="@string/today"
            android:src="@drawable/swipe_indicator_active" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins_for_slide_indicators"
            android:layout_marginLeft="@dimen/margins_for_slide_indicators"
            android:layout_marginEnd="@dimen/margins_for_slide_indicators"
            android:layout_marginRight="@dimen/margins_for_slide_indicators"
            android:contentDescription="@string/random"
            android:src="@drawable/swipe_indicator_passive" />
    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorPrimary"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/floating_action_button"
        android:tint="@color/white"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>